# Physics-Engine

./: CMakeLists.txt
src/: Kinematics.cpp  ball.cpp  customPhysics.cpp  customPhysics.h  kinematics.h  main.cpp
